# a5c-engram

./: CHANGELOG.md  LICENSE  README.md  TODO.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: README.md  chatbot_demo.py  grdt_atlas_demo.py  integrate_fastapi.py  real_embedder_demo.py  real_llm_demo.py
scripts/: take_screenshots.py  verify_real_embedder.py
src/a5c_engram/: __init__.py  profile.py  schema.py
src/a5c_engram/embed/: __init__.py  base.py  bge.py  fastembed.py  openai.py  voyage.py
src/a5c_engram/extract/: __init__.py  deterministic.py  llm.py  verify.py
src/a5c_engram/llm/: __init__.py  anthropic.py  base.py  fake.py
src/a5c_engram/retrieve/: __init__.py  fuse.py
src/a5c_engram/server/: __init__.py  __main__.py  app.py
src/a5c_engram/storage/: __init__.py  base.py  sqlite.py
src/a5c_engram/ui/: __init__.py  routes.py
src/a5c_engram/ui/static/: app.css
src/a5c_engram/ui/templates/: base.html  memories.html  memory.html  profiles.html  recall.html  sessions.html
tests/: conftest.py  helpers.py  test_channel_count.py  test_concurrent_writes.py  test_deterministic_extract.py  test_error_paths.py  test_forget.py  test_http_endpoints.py  test_idempotent_remember.py  test_large_profile.py  test_llm_extract.py  test_paraphrase.py  test_profile.py  test_remember_validation.py  test_rrf.py  test_server_and_ui.py  test_sessions.py  test_storage.py  test_temporal.py  test_ui_pages.py  test_vector_retrieval.py  test_verify.py
