[project]
name = "a5c-engram"
version = "0.1.0"
description = "Self-hostable, extraction-first agent memory."
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "fen" }]
keywords = ["agents", "memory", "llm", "rag", "ai"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "sqlite-vec>=0.1.3",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "jinja2>=3.1",
  "httpx>=0.27",
  "pydantic>=2.6",
]

[project.optional-dependencies]
embed = ["sentence-transformers>=2.7"]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.30"]
all = [
  "sentence-transformers>=2.7",
  "anthropic>=0.40",
  "openai>=1.30",
]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]

[project.scripts]
a5c-engram = "a5c_engram.server.app:main"

[project.urls]
Homepage = "https://github.com/fenneh/a5c-engram"
Issues = "https://github.com/fenneh/a5c-engram/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/a5c_engram"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
